# cubricate

./: .gitignore  README.txt  TODO_list.txt
client-project/: CMakeLists.txt  build_shaders.sh  client-project.kdev4
resources/: BasicShader.fp  InstancedCube.fp  InstancedCube.vp  RaytracingShader.fp  RaytracingShader.vp  RaytracingShaderDepthPass.fp  World1.schematic  height_map2.txt  height_map3.txt  height_map6.txt  height_map8.txt
resources/textures/: ++++  convert_image_type_cur_folder.sh  convert_image_type_recursively.sh  convert_single_file.sh  tile_0.tga  tile_1.tga  tile_10.tga  tile_102.tga  tile_103.tga  tile_104.tga  tile_105.tga  tile_106.tga  tile_107.tga  tile_108.tga  tile_109.tga  tile_11.tga  tile_110.tga  tile_111.tga  tile_112.tga  tile_113.tga  tile_114.tga  tile_115.tga  tile_116.tga  tile_117.tga  tile_118.tga  tile_119.tga  tile_12.tga  tile_120.tga  tile_121.tga  tile_122.tga  tile_123.tga  tile_124.tga  tile_125.tga  tile_126.tga  tile_127.tga  tile_128.tga  tile_129.tga  tile_13.tga  tile_130.tga  tile_131.tga  (+166 more)
resources/textures/blocks/1/: down.tga
resources/textures/blocks/3/: up.tga
resources/textures/blocks/4/: front.tga  up.tga
resources/textures/blocks/8/: down.tga
resources/textures/cubemaps/: list
resources/textures/cubemaps/0/: back.tga
resources/textures/cubemaps/1/: down.tga  front.tga  multiply_down.sh  up.tga
resources/textures/cubemaps/2/: left.tga
resources/textures/cubemaps/5/: front.tga
resources/textures/cubemaps/normals/0/: back.tga
resources/textures/cubemaps/normals/1/: right.tga  up.tga
resources/textures/decals/1/: Untitled.xcf  up.tga
resources/textures/normals/0/: down.tga
resources/textures/normals/1/: front.tga  left.tga  up_bathroom.tga
server-project/: CMakeLists.txt  server-project.kdev4
src/client/: client_world.cpp  client_world.hpp  cube_array.hpp  glwidget.cpp  glwidget.hpp  main.cpp  octree.cpp  octree.hpp  shaders_common.h  simple_world_map.cpp  simple_world_map.hpp  visible_cube_set.cpp  visible_cube_set.hpp
src/client/GLTools/: GLFrustum.h  GLShaderLoader.cpp  GLShaderLoader.h  math3d.cpp  math3d.h
src/client/GLTools/include/: GLBatch.h  GLShaderManager.h  GLTools.h  GLTriangleBatch.h  math3d.h
src/client/GLTools/src/: GLBatch.cpp
src/client/shaders/: BasicShader.fp  BasicShader.vp  InstancedCube.fp  InstancedCube.vp  RaytracingShader.fp  RaytracingShaderDepthPass.fp  RaytracingShadersCommon.h  UIShader.fp  UIShader.vp
src/common/: box_geometry.hpp  c++0x_workaround.hpp  c++11_feature_tests.hpp  c++11_workaround.hpp  clock.hpp  cube_geometry.hpp  debug.hpp  game_parameters.hpp  gl_header.hpp  linear_algebra.hpp  math_utils.hpp  multidim_array.hpp  network_base.hpp  player.cpp  player.hpp  simple_light_map.cpp  simple_light_map.hpp  simple_world_map.cpp  simple_world_map.hpp  string_utils.hpp  time.hpp  utils.hpp  world_block.hpp  world_chunk.cpp  world_chunk.hpp  world_map.cpp  world_map.hpp
src/common/gl/: gl.h  glprocs.c  glprocs.h
src/common/physics/: water_engine.cpp  water_engine.hpp
src/server/: main.cpp  server_world.cpp  server_world.hpp
utils/Bump_map_generator/: Bump_map_generator.kdev4  CMakeLists.txt  main.cpp
utils/Image_data_extractor/: CMakeLists.txt  Image_data_extractor.kdev4  main.cpp
utils/Macro_processor/: CMakeLists.txt  main.cpp
utils/Sibling_array_generator/: CMakeLists.txt  Sibling_array_generator.kdev4  main.cpp
